--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="content">
       <div class="con-header">
         <h2>基本信息</h2>
+      </div>
         <div class="con-major clearfix">
           <div class="con-list fl">
             <p>
@@ -53,49 +54,64 @@
             <p>负责公司移动端混合app的开发。</p>
           </div>
         </div>
-      </div>
+      
     </div>
+    <div class="ability">
+        <div class="abi-header">
+          <h2>专业技能</h2>
+          <div class="abi-major">
+            
+          </div>
+        </div>
+      </div>
     <div class="project">
       <div class="pro-header">
         <h2>个人项目</h2>
-        <div class="pro pro-one">
-          <a href="http://woke.jiugubao.com/">
-            <img src="image/one.png" alt=""> 
-            <h4>蜗客商城(http://woke.jiugubao.com/)</h4>
-          </a>
-          <p>
-              项目采用了<b>阿里的UI组件库sui</b>，使代码编写更简单便捷。
-              采用了<b>面向对象的方法</b>，将常用的方法封装在一个js内，减少代码的重复性及冗余。
-              使用 <b>ajax</b> 和后端通讯，获取数据展示在前端页面。
-              关于支付模块，调用ping++所提供接口及文档完成支付。
-              在沪深300模块，股票行情显示，ajax获取行情数据，使用 <b>echarts</b> 图表展示行情数据。
-          </p>
-        </div>
-        <div class="pro pro-two">
-            <a href="http://app.iwoke.club/index.html">
-              <img src="image/two.png" alt=""> 
-              <h4>蜗客校园(http://app.iwoke.club/index.html)</h4>
-            </a>
-            <p>
-                该项目是用 <b>vue构建的单页应用</b> ，vue-router前端路由，
-                使页面之间跳转更加快速，用户操作更加流畅。
-                使用 <b>MintUI组件库</b> ，前端页面快速构建，使用 <b>axios</b> 和后端进行数据交互，
-                利用 <b>less</b> 来编写项目的样式，使项目样式更加方便管理。
-            </p>
-          </div>
-          <div class="pro pro-three">
-              <a href="http://xiu.iwoke.club/index.html">
-                <img src="image/two.png" alt=""> 
-                <h4>咻咻咻(http://app.iwoke.club/index.html)</h4>
-              </a>
-              <p>
-                  该项目是用 <b>vue</b> 构建的单页应用，使用 <b>MintUI</b> 组件库，利用 <b>less</b> 编写项目样式，
-                  使页面简洁优美。在该项目中，引用了 <b>photoswipe</b> 插件对显示图片进行处理，
-                  可供用户查看大图；使用 <b>iscroll</b> 插件对页面进行分页数据显示，
-                  使用 <b>vue-star</b> 组件来实现用户点赞特效，增加用户体验。
-              </p>
-            </div>
       </div>
+      <div class="pro pro-one">
+        <a href="http://woke.jiugubao.com/">
+          <img src="image/one.png" alt="">
+          <h4>蜗客商城(http://woke.jiugubao.com/)</h4>
+        </a>
+        <p>
+          项目采用了
+          <b>阿里的UI组件库sui</b>，使代码编写更简单便捷。 采用了
+          <b>面向对象的方法</b>，将常用的方法封装在一个js内，减少代码的重复性及冗余。 使用
+          <b>ajax</b> 和后端通讯，获取数据展示在前端页面。 关于支付模块，调用ping++所提供接口及文档完成支付。 在沪深300模块，股票行情显示，ajax获取行情数据，使用
+          <b>echarts</b> 图表展示行情数据。
+        </p>
+      </div>
+      <div class="pro pro-two">
+        <a href="http://app.iwoke.club/index.html">
+          <img src="image/two.png" alt="">
+          <h4>蜗客校园(http://app.iwoke.club/index.html)</h4>
+        </a>
+        <p>
+          该项目是用
+          <b>vue构建的单页应用</b> ，vue-router前端路由， 使页面之间跳转更加快速，用户操作更加流畅。 使用
+          <b>MintUI组件库</b> ，前端页面快速构建，使用
+          <b>axios</b> 和后端进行数据交互， 利用
+          <b>less</b> 来编写项目的样式，使项目样式更加方便管理。
+        </p>
+      </div>
+      <div class="pro pro-three">
+        <a href="http://xiu.iwoke.club/index.html">
+          <img src="image/three1.jpg" alt="">
+          <img src="image/three2.jpg" alt="">
+          <img src="image/three3.jpg" alt="">
+          <h4>咻咻咻(http://app.iwoke.club/index.html)</h4>
+        </a>
+        <p>
+          该项目是用
+          <b>vue</b> 构建的单页应用，使用
+          <b>MintUI</b> 组件库，利用
+          <b>less</b> 编写项目样式， 使页面简洁优美。在该项目中，引用了
+          <b>photoswipe</b> 插件对显示图片进行处理， 可供用户查看大图；使用
+          <b>iscroll</b> 插件对页面进行分页数据显示， 使用
+          <b>vue-star</b> 组件来实现用户点赞特效，增加用户体验。
+        </p>
+      </div>
+
     </div>
   </div>
 </body>
