--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <b>专业：</b>计算机科学与技术(2013-2017)
           </p>
         </div>
+        <i></i>
         <div class="con-list fr">
           <!-- <h4>工作经历</h4> -->
           <p>2016.04-2017.09 任职于
@@ -110,9 +111,7 @@
       </div>
       <div class="pro pro-three">
         <a href="http://xiu.iwoke.club/index.html">
-          <img src="image/three1.jpg" alt="">
-          <img src="image/three2.jpg" alt="">
-          <img src="image/three3.jpg" alt="">
+          <img src="image/three.png" alt="">
           <h4>咻咻咻(http://app.iwoke.club/index.html)</h4>
         </a>
         <p>
@@ -129,7 +128,16 @@
     </div>
     <div class="foot">
         <h2>感谢您阅读我的求职简历</h2>
-        
+        <div class="foot-icon clearfix">
+          <div class="fl">
+            <p><i class="icon icon-name"></i> <a href="maryru.github.io">马玉茹</a> </p>
+            <p><i class="icon icon-phone"></i>18237714532</p>
+          </div>
+          <div class="fr">
+            <p><i class="icon icon-git"></i><a href="https://github.com/MaryRu">https://github.com/MaryRu</a></p>
+            <p><i class="icon icon-mail"></i>18237714532@163.com</p>
+          </div>
+        </div>
     </div>
   </div>
 </body>
