--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2>感谢您阅读我的求职简历</h2>
         <div class="foot-icon clearfix">
           <div class="fl">
-            <p><i class="icon icon-name"></i> <a href="maryru.github.io">马玉茹</a> </p>
+            <p><i class="icon icon-name"></i> <a href="https://maryru.github.io">马玉茹</a> </p>
             <p><i class="icon icon-phone"></i>18237714532</p>
           </div>
           <div class="fr">
