--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="head-tab"></div>
       <div class="head-con">
         <div class="head-img">
-          <img src="image/avatar.png" alt="">
+          <img src="http://ofkzpykzq.bkt.clouddn.com/avatar.png" alt="">
         </div>
         <div class="head-desc">
           <p>马玉茹</p>
@@ -85,7 +85,7 @@
       </div>
       <div class="pro pro-one">
         <a href="http://woke.jiugubao.com/">
-          <img src="image/one.png" alt="">
+          <img src="http://ofkzpykzq.bkt.clouddn.com/one.png" alt="">
           <h4>蜗客商城(http://woke.jiugubao.com/)</h4>
         </a>
         <p>
@@ -98,7 +98,7 @@
       </div>
       <div class="pro pro-two">
         <a href="http://app.iwoke.club/index.html">
-          <img src="image/two.png" alt="">
+          <img src="http://ofkzpykzq.bkt.clouddn.com/two.png" alt="">
           <h4>蜗客校园(http://app.iwoke.club/index.html)</h4>
         </a>
         <p>
@@ -111,7 +111,7 @@
       </div>
       <div class="pro pro-three">
         <a href="http://xiu.iwoke.club/index.html">
-          <img src="image/three.png" alt="">
+          <img src="http://ofkzpykzq.bkt.clouddn.com/three.png" alt="">
           <h4>咻咻咻(http://app.iwoke.club/index.html)</h4>
         </a>
         <p>
