--- a/index.html
+++ b/index.html
@@ -83,10 +83,22 @@
       <div class="pro-header">
         <h2>个人项目</h2>
       </div>
+      <div class="pro pro-zero">
+        <a href="http://woke.jiugubao.com/">
+          <img src="http://ofkzpykzq.bkt.clouddn.com/shouye.png" alt="">
+          <h4>蜗客商城(PC端)</h4>
+        </a>
+        <p>
+          项目采用了
+          <b>DIV+CSS</b>的布局方式。 
+          <b>JavaScript</b>实现页面的一些动态效果。 使用
+          <b>Bootstrap</b> 框架对页面进行布局，使页面具有响应式布局，达到良好的用户体验。
+        </p>
+      </div>
       <div class="pro pro-one">
         <a href="http://woke.jiugubao.com/">
           <img src="http://ofkzpykzq.bkt.clouddn.com/one.png" alt="">
-          <h4>蜗客商城(http://woke.jiugubao.com/)</h4>
+          <h4>蜗客商城(移动端)(http://woke.jiugubao.com/)</h4>
         </a>
         <p>
           项目采用了
